// Vitest Snapshot v1

exports[`Button > should render 1`] = `
"<button class=\\"btn btn-md btn-default\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;

exports[`Button > should work with block prop 1`] = `
"<button class=\\"btn btn-md btn-default btn-block\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;

exports[`Button > should work with circle prop 1`] = `
"<button class=\\"btn btn-md btn-default btn-circle\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;

exports[`Button > should work with disabled prop 1`] = `
"<button class=\\"btn btn-md btn-default\\" disabled=\\"\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;

exports[`Button > should work with size prop 1`] = `
"<button class=\\"btn btn-lg btn-default\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;

exports[`Button > should work with size prop 2`] = `
"<button class=\\"btn btn-sm btn-default\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;

exports[`Button > should work with size prop 3`] = `
"<button class=\\"btn btn-xs btn-default\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;

exports[`Button > should work with type prop 1`] = `
"<button class=\\"btn btn-md btn-primary\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;

exports[`Button > should work with type prop 2`] = `
"<button class=\\"btn btn-md btn-secondary\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;

exports[`Button > should work with type prop 3`] = `
"<button class=\\"btn btn-md btn-danger\\">
  <!--v-if--><span class=\\"btn-content self-center\\"></span>
</button>"
`;
